added seo to the site

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,50 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>DevFlowFix Dashboard | DevFlowFix</title>
+  <title>DevFlowFix - Modern Project Management Dashboard</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Primary Meta Tags -->
+  <meta name="title" content="DevFlowFix - Modern Project Management Dashboard">
+  <meta name="description" content="DevFlowFix is a modern, feature-rich dashboard for project management, team collaboration, and workflow optimization. Built with Angular and designed for developers.">
+  <meta name="keywords" content="devflowfix, project management, dashboard, angular, workflow, collaboration, development tools, team management">
+  <meta name="author" content="DevFlowFix">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="English">
+  <meta name="theme-color" content="#ff8800">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://devflowfix.com/">
+  <meta property="og:title" content="DevFlowFix - Modern Project Management Dashboard">
+  <meta property="og:description" content="DevFlowFix is a modern, feature-rich dashboard for project management, team collaboration, and workflow optimization.">
+  <meta property="og:image" content="https://devflowfix.com/images/og-image.png">
+  <meta property="og:site_name" content="DevFlowFix">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://devflowfix.com/">
+  <meta name="twitter:title" content="DevFlowFix - Modern Project Management Dashboard">
+  <meta name="twitter:description" content="DevFlowFix is a modern, feature-rich dashboard for project management, team collaboration, and workflow optimization.">
+  <meta name="twitter:image" content="https://devflowfix.com/images/og-image.png">
+  <meta name="twitter:site" content="@devflowfix">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://devflowfix.com/">
+
+  <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+
+  <!-- Additional SEO -->
+  <meta name="application-name" content="DevFlowFix">
+  <meta name="apple-mobile-web-app-title" content="DevFlowFix">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="msapplication-TileColor" content="#ff8800">
 </head>
 <body>
   <app-root></app-root>
