added robot, manifest and sitemap

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,9 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
+  <!-- PWA Manifest -->
+  <link rel="manifest" href="manifest.json">
+
   <!-- Additional SEO -->
   <meta name="application-name" content="DevFlowFix">
   <meta name="apple-mobile-web-app-title" content="DevFlowFix">
