updated og images

--- a/src/index.html
+++ b/src/index.html
@@ -17,22 +17,22 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://devflowfix.com/">
+  <meta property="og:url" content="https://devflowfix-dashboard.vercel.app">
   <meta property="og:title" content="DevFlowFix - Modern Project Management Dashboard">
   <meta property="og:description" content="DevFlowFix is a modern, feature-rich dashboard for project management, team collaboration, and workflow optimization.">
-  <meta property="og:image" content="https://devflowfix.com/images/og-image.png">
+  <meta property="og:image" content="https://devflowfix-dashboard.vercel.app/images/devflowfix_og_img.png">
   <meta property="og:site_name" content="DevFlowFix">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:url" content="https://devflowfix.com/">
+  <meta name="twitter:url" content="https://x.com/devflowfix">
   <meta name="twitter:title" content="DevFlowFix - Modern Project Management Dashboard">
   <meta name="twitter:description" content="DevFlowFix is a modern, feature-rich dashboard for project management, team collaboration, and workflow optimization.">
-  <meta name="twitter:image" content="https://devflowfix.com/images/og-image.png">
+  <meta name="twitter:image" content="https://devflowfix-dashboard.vercel.app/images/devflowfix_og_img.png">
   <meta name="twitter:site" content="@devflowfix">
 
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://devflowfix.com/">
+  <link rel="canonical" href="https://devflowfix-dashboard.vercel.app">
 
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
