--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,6 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Primary Meta Tags -->
   <meta name="title" content="DevFlowFix - Modern Project Management Dashboard">
   <meta name="description" content="DevFlowFix is a modern, feature-rich dashboard for project management, team collaboration, and workflow optimization. Built with Angular and designed for developers.">
   <meta name="keywords" content="devflowfix, project management, dashboard, angular, workflow, collaboration, development tools, team management">
@@ -23,7 +22,6 @@
   <meta name="language" content="English">
   <meta name="theme-color" content="#ff8800">
 
-  <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://devflowfix.astrareconslabs.com">
   <meta property="og:title" content="DevFlowFix - Modern Project Management Dashboard">
@@ -31,7 +29,6 @@
   <meta property="og:image" content="https://devflowfix.astrareconslabs.com/images/devflowfix_og_img.png">
   <meta property="og:site_name" content="DevFlowFix">
 
-  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://x.com/devflowfix">
   <meta name="twitter:title" content="DevFlowFix - Modern Project Management Dashboard">
@@ -39,34 +36,27 @@
   <meta name="twitter:image" content="https://devflowfix.astrareconslabs.com/images/devflowfix_og_img.png">
   <meta name="twitter:site" content="@devflowfix">
 
-  <!-- Canonical URL -->
   <link rel="canonical" href="https://devflowfix.astrareconslabs.com">
 
-  <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
-  <!-- PWA Manifest -->
   <link rel="manifest" href="manifest.json">
 
-  <!-- Additional SEO -->
   <meta name="application-name" content="DevFlowFix">
   <meta name="apple-mobile-web-app-title" content="DevFlowFix">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="msapplication-TileColor" content="#ff8800">
 
-  <!-- Security Headers (fallback for hosting platforms without header config) -->
   <meta http-equiv="X-Content-Type-Options" content="nosniff">
   <meta http-equiv="X-XSS-Protection" content="1; mode=block">
   <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
 
-  <!-- Content Security Policy (Note: frame-ancestors directive is ignored in meta tags) -->
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-eval' 'unsafe-inline' https://www.googletagmanager.com https://www.google-analytics.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com data:; img-src 'self' data: https: blob: https://www.googletagmanager.com https://www.google-analytics.com; connect-src 'self' https://devflowfix-new-production.up.railway.app https://www.googletagmanager.com https://www.google-analytics.com https://analytics.google.com; base-uri 'self'; form-action 'self'">
 
-  <!-- Structured Data - Organization (for initial load before Angular) -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -88,7 +78,6 @@
   }
   </script>
 
-  <!-- Structured Data - WebSite -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -103,7 +92,6 @@
   }
   </script>
 
-  <!-- Structured Data - SoftwareApplication -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -125,6 +113,43 @@
       "ArgoCD integration",
       "Kubernetes support",
       "NVIDIA NIM AI-powered analysis"
+    ]
+  }
+  </script>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ItemList",
+    "itemListElement": [
+      {
+        "@type": "SiteNavigationElement",
+        "position": 1,
+        "name": "Home",
+        "description": "DevFlowFix Homepage - AI-powered deployment failure resolution",
+        "url": "https://devflowfix.astrareconslabs.com"
+      },
+      {
+        "@type": "SiteNavigationElement",
+        "position": 2,
+        "name": "Sign In",
+        "description": "Sign in to your DevFlowFix dashboard",
+        "url": "https://devflowfix.astrareconslabs.com/signin"
+      },
+      {
+        "@type": "SiteNavigationElement",
+        "position": 3,
+        "name": "Sign Up",
+        "description": "Create a free DevFlowFix account",
+        "url": "https://devflowfix.astrareconslabs.com/signup"
+      },
+      {
+        "@type": "SiteNavigationElement",
+        "position": 4,
+        "name": "Dashboard",
+        "description": "Access your DevFlowFix dashboard",
+        "url": "https://devflowfix.astrareconslabs.com/dashboard"
+      }
     ]
   }
   </script>
