--- a/src/index.html
+++ b/src/index.html
@@ -51,11 +51,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="msapplication-TileColor" content="#ff8800">
 
-  <meta http-equiv="X-Content-Type-Options" content="nosniff">
-  <meta http-equiv="X-XSS-Protection" content="1; mode=block">
-  <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
-
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-eval' 'unsafe-inline' https://www.googletagmanager.com https://www.google-analytics.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com data:; img-src 'self' data: https: blob: https://www.googletagmanager.com https://www.google-analytics.com; connect-src 'self' https://devflowfix-new-production.up.railway.app https://www.googletagmanager.com https://www.google-analytics.com https://analytics.google.com; base-uri 'self'; form-action 'self'">
+  <!-- Security headers handled by vercel.json -->
 
   <script type="application/ld+json">
   {
