added google analytics

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,16 @@
   })(window,document,'script','dataLayer','GTM-TVCL3PN6');</script>
   <!-- End Google Tag Manager -->
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-LPNVX4RD1L"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-LPNVX4RD1L');
+  </script>
+
   <meta charset="utf-8">
   <title>DevFlowFix - Dashboard for AI agent for CI/CD pipelines</title>
   <base href="/">
@@ -50,8 +60,6 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="msapplication-TileColor" content="#ff8800">
-
-  <!-- Security headers handled by vercel.json -->
 
   <script type="application/ld+json">
   {
