updated seo and also pages too

--- a/src/index.html
+++ b/src/index.html
@@ -136,23 +136,58 @@
       {
         "@type": "SiteNavigationElement",
         "position": 2,
+        "name": "Product",
+        "description": "Explore DevFlowFix features and capabilities",
+        "url": "https://devflowfix.astrareconslabs.com/product"
+      },
+      {
+        "@type": "SiteNavigationElement",
+        "position": 3,
+        "name": "Pricing",
+        "description": "Simple, transparent pricing plans",
+        "url": "https://devflowfix.astrareconslabs.com/pricing"
+      },
+      {
+        "@type": "SiteNavigationElement",
+        "position": 4,
+        "name": "About",
+        "description": "Learn about DevFlowFix and our mission",
+        "url": "https://devflowfix.astrareconslabs.com/about"
+      },
+      {
+        "@type": "SiteNavigationElement",
+        "position": 5,
+        "name": "Blog",
+        "description": "DevOps insights and tutorials",
+        "url": "https://devflowfix.astrareconslabs.com/blog"
+      },
+      {
+        "@type": "SiteNavigationElement",
+        "position": 6,
+        "name": "Help Center",
+        "description": "Documentation and support resources",
+        "url": "https://devflowfix.astrareconslabs.com/help-center"
+      },
+      {
+        "@type": "SiteNavigationElement",
+        "position": 7,
+        "name": "Contact",
+        "description": "Get in touch with our team",
+        "url": "https://devflowfix.astrareconslabs.com/contact"
+      },
+      {
+        "@type": "SiteNavigationElement",
+        "position": 8,
         "name": "Sign In",
         "description": "Sign in to your DevFlowFix dashboard",
         "url": "https://devflowfix.astrareconslabs.com/signin"
       },
       {
         "@type": "SiteNavigationElement",
-        "position": 3,
+        "position": 9,
         "name": "Sign Up",
         "description": "Create a free DevFlowFix account",
         "url": "https://devflowfix.astrareconslabs.com/signup"
-      },
-      {
-        "@type": "SiteNavigationElement",
-        "position": 4,
-        "name": "Dashboard",
-        "description": "Access your DevFlowFix dashboard",
-        "url": "https://devflowfix.astrareconslabs.com/dashboard"
       }
     ]
   }
