added skip onboarding and updated the accessibility to wcag

--- a/src/index.html
+++ b/src/index.html
@@ -240,8 +240,11 @@
 <body>
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TVCL3PN6"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  height="0" width="0" style="display:none;visibility:hidden" title="Google Tag Manager"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
+
+  <!-- Skip to Main Content Link (WCAG 2.4.1) -->
+  <a href="#main-content" class="skip-link">Skip to main content</a>
 
   <app-root></app-root>
 </body>
