updated the social media icons

--- a/src/index.html
+++ b/src/index.html
@@ -244,7 +244,7 @@
   <!-- End Google Tag Manager (noscript) -->
 
   <!-- Skip to Main Content Link (WCAG 2.4.1) -->
-  <a href="#main-content" class="skip-link">Skip to main content</a>
+  <a href="#main-content" class="skip-link" style="position:absolute;top:-100%;left:50%;transform:translateX(-50%);">Skip to main content</a>
 
   <app-root></app-root>
 </body>
