--- a/src/index.html
+++ b/src/index.html
@@ -79,17 +79,17 @@
   <meta name="theme-color" content="#ff8800">
 
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://devflowfix.astrareconslabs.com">
+  <meta property="og:url" content="https://devflowfix.com">
   <meta property="og:title" content="DevFlowFix - Modern Project Management Dashboard">
   <meta property="og:description" content="DevFlowFix is a modern, feature-rich dashboard for project management, team collaboration, and workflow optimization.">
-  <meta property="og:image" content="https://devflowfix.astrareconslabs.com/images/logo/devflowfix_image.png">
+  <meta property="og:image" content="https://devflowfix.com/images/logo/devflowfix_image.png">
   <meta property="og:site_name" content="DevFlowFix">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://x.com/devflowfix">
   <meta name="twitter:title" content="DevFlowFix - Modern Project Management Dashboard">
   <meta name="twitter:description" content="DevFlowFix is a modern, feature-rich dashboard for project management, team collaboration, and workflow optimization.">
-  <meta name="twitter:image" content="https://devflowfix.astrareconslabs.com/images/devflowfix_og_img.png">
+  <meta name="twitter:image" content="https://devflowfix.com/images/devflowfix_og_img.png">
   <meta name="twitter:site" content="@devflowfix">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -110,8 +110,8 @@
     "@context": "https://schema.org",
     "@type": "Organization",
     "name": "DevFlowFix",
-    "url": "https://devflowfix.astrareconslabs.com",
-    "logo": "https://devflowfix.astrareconslabs.com/images/logo/logo.svg",
+    "url": "https://devflowfix.com",
+    "logo": "https://devflowfix.com/images/logo/logo.svg",
     "description": "AI-powered platform that automatically fixes 75% of deployment failures in under 8 minutes",
     "sameAs": [
       "https://twitter.com/devflowfix",
@@ -131,7 +131,7 @@
     "@context": "https://schema.org",
     "@type": "WebSite",
     "name": "DevFlowFix",
-    "url": "https://devflowfix.astrareconslabs.com",
+    "url": "https://devflowfix.com",
     "description": "Automated Deployment Failure Resolution Platform",
     "publisher": {
       "@type": "Organization",
@@ -148,8 +148,8 @@
     "applicationCategory": "DeveloperApplication",
     "operatingSystem": "Web",
     "description": "AI-powered platform that automatically fixes deployment failures. Integrates with GitHub Actions, ArgoCD, and Kubernetes.",
-    "url": "https://devflowfix.astrareconslabs.com",
-    "image": "https://devflowfix.astrareconslabs.com/images/devflowfix_og_img.png",
+    "url": "https://devflowfix.com",
+    "image": "https://devflowfix.com/images/devflowfix_og_img.png",
     "offers": {
       "@type": "Offer",
       "price": "0",
@@ -175,63 +175,63 @@
         "position": 1,
         "name": "Home",
         "description": "DevFlowFix Homepage - AI-powered deployment failure resolution",
-        "url": "https://devflowfix.astrareconslabs.com"
+        "url": "https://devflowfix.com"
       },
       {
         "@type": "SiteNavigationElement",
         "position": 2,
         "name": "Product",
         "description": "Explore DevFlowFix features and capabilities",
-        "url": "https://devflowfix.astrareconslabs.com/product"
+        "url": "https://devflowfix.com/product"
       },
       {
         "@type": "SiteNavigationElement",
         "position": 3,
         "name": "Pricing",
         "description": "Simple, transparent pricing plans",
-        "url": "https://devflowfix.astrareconslabs.com/pricing"
+        "url": "https://devflowfix.com/pricing"
       },
       {
         "@type": "SiteNavigationElement",
         "position": 4,
         "name": "About",
         "description": "Learn about DevFlowFix and our mission",
-        "url": "https://devflowfix.astrareconslabs.com/about"
+        "url": "https://devflowfix.com/about"
       },
       {
         "@type": "SiteNavigationElement",
         "position": 5,
         "name": "Blog",
         "description": "DevOps insights and tutorials",
-        "url": "https://devflowfix.astrareconslabs.com/blog"
+        "url": "https://devflowfix.com/blog"
       },
       {
         "@type": "SiteNavigationElement",
         "position": 6,
         "name": "Help Center",
         "description": "Documentation and support resources",
-        "url": "https://devflowfix.astrareconslabs.com/help-center"
+        "url": "https://devflowfix.com/help-center"
       },
       {
         "@type": "SiteNavigationElement",
         "position": 7,
         "name": "Contact",
         "description": "Get in touch with our team",
-        "url": "https://devflowfix.astrareconslabs.com/contact"
+        "url": "https://devflowfix.com/contact"
       },
       {
         "@type": "SiteNavigationElement",
         "position": 8,
         "name": "Sign In",
         "description": "Sign in to your DevFlowFix dashboard",
-        "url": "https://devflowfix.astrareconslabs.com/signin"
+        "url": "https://devflowfix.com/signin"
       },
       {
         "@type": "SiteNavigationElement",
         "position": 9,
         "name": "Sign Up",
         "description": "Create a free DevFlowFix account",
-        "url": "https://devflowfix.astrareconslabs.com/signup"
+        "url": "https://devflowfix.com/signup"
       }
     ]
   }
