Update gtm code

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
   j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-TVCL3PN6');</script>
+  })(window,document,'script','dataLayer','GTM-T384SGWX');</script>
   <!-- End Google Tag Manager -->
 
   <!-- Google tag (gtag.js) -->
@@ -239,7 +239,7 @@
 </head>
 <body>
   <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TVCL3PN6"
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T384SGWX"
   height="0" width="0" style="display:none;visibility:hidden" title="Google Tag Manager"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
 
